@@ -1,3 +1,3 @@
 <sect1 id="config-file-type">
-  <title>File Types & Services</title>
+  <title>File Types &amp; Services</title>
 </sect1>
