@@ -1,3 +1,10 @@
+2002-05-16  Jody Goldberg <jody@gnome.org>
+
+	* C/config-file-type.xml : escape the ampersand.
+
+	* C/Makefile.am (dist) : install control-center.xml and
+	  config-default-apps.xml.
+
 2002-04-23  Jody Goldberg <jody@gnome.org>
 
 	* C/control-center.xml : link in the place holders and add an
